2000-07-26  Michael Meeks  <michael@helixcode.com>

	* container-io.c (STORAGE_TYPE): change to efs.

2000-07-23  Michael Meeks  <michael@helixcode.com>

	* Massive clean, rename, re-write huge chunks, everything is now
	officialy my fault.

	* container-print.c (sample_app_print_preview): allow each component
	a larger, square space to render to.

	* container-menu.c: Prune all GUI conditionals, you just need to
	save a compound document and use it on startup to get this effect.
	(add_cb): use gnome_bonobo_select_id
	(about_cb): update authors / copyright.

	* container.c (sample_app_remove_component): don't do more work than
	neccessary, don't container_remove, just destroy the containing widget.
	Move into:
	
	* component.c (component_del): where it belongs.

2000-07-13  Michael Meeks  <michael@helixcode.com>

	* container-print.c (sample_app_print_preview): kill unref of print
	preview widget, and also context.

	* component.c (load_stream_cb): update to show exception nicely.

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* container.c (sample_app_shutdown): unref the ui_handler.
	(main): hook in & add obejct_shutdown (sample_app_remove_component):
	remove ourselfs from the container

2000-07-10  Michael Meeks  <michael@helixcode.com>

	* component.c (component_del): unref the client site too.

	* container.c (sample_app_create): bump init size.

2000-07-06  Michael Meeks  <michael@helixcode.com>

	* container-io.c (save_component): unref the sub directory.

	* component.c: re-order to kill ugly prototypes.

	* container.c (sample_app_exit): unref not destroy container.

	* container-io.c (save_component): release the stream.
	(load_component_id): unref stream.
	(open_stream): remove; use CORBA interface instead.
	(sample_container_save): unref storage after use.

	* component-io.c: Totaly re-stucture, fix exception handling and
	the mess with CORBA_Environments.

	* component-io.h: update.

2000-07-05  Michael Meeks  <michael@helixcode.com>
